# one-vpl-encode-deom

./: .gitignore  CMakeLists.txt  LICENSE  README.md  test.cpp  util.h  vpl  vpl-encode-module.cpp  vpl-encode-test  vpl-encode-test.cpp
include/: vpl-encode-module.hpp
src/: vpl-encode-module-demo.cpp  vpl-encode-module.cpp
